--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                 <span>LOCKED</span></button>
             <button id="phase-3-btn" class="phase-btn locked" onclick="startPhase(3)">Phase 3
                 <span>LOCKED</span></button>
+            <button id="phase-4-btn" class="phase-btn locked" onclick="startPhase(4)">Phase 4
+                <span>LOCKED</span></button>
         </div>
 
         <div id="game-row">
@@ -163,7 +165,7 @@
             <div class="modal-content">
                 <span class="close"
                     onclick="document.getElementById('ranking-modal').style.display='none';">&times;</span>
-                <h2 id="ranking-title">GLOBAL RANKING – PHASE 1</h2>
+                <h2 id="ranking-title">GLOBAL RANKING </h2>
                 <div id="ranking-list" style="margin:20px 0;font-family:monospace;text-align:left;">Loading...</div>
                 <button onclick="document.getElementById('ranking-modal').style.display='none';"
                     class="green-btn">Close</button>
