--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Start Screen  -->
     <div id="start-screen" class="screen active">
-        <div id="start-background"></div> <!--background -->
+        <div id="start-background"></div> 
         <h1>Code Path Challenge</h1>
         <p>Guide the cube from A to B using direction commands!</p>
 
@@ -136,6 +136,7 @@
                                 class="fas fa-arrow-right"></i></button>
                     </div>
                 </div>
+              
             </div>
         </div>
 
