--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         <div id="game-row">
             <!-- Grid -->
             <div class="grid-outer">
-    <div class="grid-inner">
-        <div id="game-container">
-            <div id="grid"></div>
-            <div id="cube"></div>
-            <div id="start-point" class="point">A</div>
-            <div id="end-point" class="point">B</div>
-        </div>
-    </div>
-</div>
+                <div class="grid-inner">
+                    <div id="game-container">
+                        <div id="grid"></div>
+                        <div id="cube"></div>
+                        <div id="start-point" class="point">A</div>
+                        <div id="end-point" class="point">B</div>
+                    </div>
+                </div>
+            </div>
 
             <!-- Controls Panel -->
             <div id="controls-panel">
@@ -177,12 +177,7 @@
 
         <div id="command-list"></div>
 
-        <!-- Button Ranking -->
-        <div style="margin:15px 0;">
-            <button onclick="showRanking(currentPhase)" class="green-btn" style="padding:14px 32px;font-size:18px;">
-                View Ranking – Phase <span id="ranking-phase-num">1</span>
-            </button>
-        </div>
+
 
         <!-- Result -->
         <div id="result-modal" style="display:none;">
@@ -198,19 +193,27 @@
 
             </div>
         </div>
+        <!-- Button Ranking -->
+        <div class="button-container">
+            <button onclick="showRanking(currentPhase || 1)" class="green-btn">
+                View Ranking – Phase <span id="ranking-phase-num">1</span>
+            </button>
+            <button onclick="showGlobalRankings()" class="green-btn">
+                View Global Rankings
+            </button>
+        </div>
 
-        <!-- RANKING  -->
-        <div id="ranking-modal" class="modal" style="display:none;">
+        <!-- RANKING MODAL (for single phase) -->
+        <div id="ranking-modal" class="modal">
             <div class="modal-content">
                 <span class="close"
                     onclick="document.getElementById('ranking-modal').style.display='none';">&times;</span>
-                <h2 id="ranking-title">GLOBAL RANKING </h2>
-                <div id="ranking-list" style="margin:20px 0;font-family:monospace;text-align:left;">Loading...</div>
+                <h2 id="ranking-title">PHASE RANKING</h2>
+                <div id="ranking-list" class="ranking-list"></div>
                 <button onclick="document.getElementById('ranking-modal').style.display='none';"
-                    class="green-btn">Close</button>
+                    class="green-btn close-btn">Close</button>
             </div>
         </div>
-
         <!-- Phase Selection -->
         <div id="phase-selection-modal" class="modal">
             <div class="modal-content">
