--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
                             class="fas fa-arrow-left"></i></button>
                     <button onclick="addToFunction('right')" class="dir-btn small"><i
                             class="fas fa-arrow-right"></i></button>
+                    <button onclick="addToFunction('F2')" class="dir-btn small recursive-call-btn"
+                        style="background:#ff6600; color:white; font-weight:bold;display:none;">
+                        F2
+                    </button>
                 </div>
 
             </div>
@@ -199,6 +203,10 @@
                             class="fas fa-arrow-left"></i></button>
                     <button onclick="addToFunction2('right')" class="dir-btn small"><i
                             class="fas fa-arrow-right"></i></button>
+                    <button onclick="addToFunction2('F')" class="dir-btn small recursive-call-btn"
+                        style="background:#ffaa00; color:white; font-weight:bold;display:none;">
+                        F1
+                    </button>
                 </div>
             </div>
         </div>
