--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 <span>LOCKED</span></button>
             <button id="phase-7-btn" class="phase-btn locked" onclick="startPhase(7)">Phase 7
                 <span>LOCKED</span></button>
+            <button id="phase-8-btn" class="phase-btn locked" onclick="startPhase(8)">Phase 8
+                <span>LOCKED</span></button>
         </div>
 
         <div id="game-row">
